fix : categories not showing correctly in the editor

--- a/assets/css/unminified/editor-rtl.css
+++ b/assets/css/unminified/editor-rtl.css
@@ -82,24 +82,18 @@
 # Category Block
 --------------------------------------------------------------*/
 .wp-block-post-terms.is-style-swt-post-terms-pill a {
+  display: inline-block;
+  font-size: var(--wp--preset--font-size--x-small);
   padding: 6px 12px;
   border-radius: var(--wp--custom--border-radius--full);
   color: var(--wp--preset--color--body);
-  background-color: var(--wp--preset--color--surface);
+  background-color: var(--wp--preset--color--outline);
   margin-left: var(--wp--preset--spacing--xx-small);
+  margin-bottom: var(--wp--preset--spacing--xx-small);
   line-height: var(--wp--custom--line-height--initial);
 }
-.wp-block-post-terms.is-style-swt-post-terms-pill a .wp-block-post-terms__separator {
+.wp-block-post-terms.is-style-swt-post-terms-pill .wp-block-post-terms__separator {
   display: none;
-}
-
-.taxonomy-category.is-style-swt-post-terms-pill {
-  padding: 6px 12px;
-  border-radius: var(--wp--custom--border-radius--full);
-  color: var(--wp--preset--color--body);
-  background-color: var(--wp--preset--color--surface);
-  margin-left: var(--wp--preset--spacing--xx-small);
-  line-height: var(--wp--custom--line-height--initial);
 }
 
 /*--------------------------------------------------------------
